[tool.poetry]
name = "dom5_helper"
version = "0.1.0"
description = ""
authors = ["Tyler Stapler <tystapler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aionotify = "^0.2.0"
discord = "^1.0.1"
beautifulsoup4 = "^4.9.3"
black = "^20.8b1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
neovim = "^0.3.1"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
